--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 title: "Enge NOUADJE FOTSO"
 logo : img/nny.jpg
-description: "Portfolio Engineer - IA, Data Science, NLP, CV"
+description: "Portfolio Enge NOUADJE FOTSO"
 show_downloads: true
 theme: jekyll-theme-minimal
 lang: fr
